--- a/src/abrimos-breve.html
+++ b/src/abrimos-breve.html
@@ -8,20 +8,21 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- <div class="stripe stripe-left"></div> -->
     <div class="grid-wrapper">
         <div class="top-text">
             <!-- <h1>Creparia Artesanal</h1> -->
-            <h2>A nossa página abrirá brevemente :) </h2>
+            <h2>A nossa página abrirá brevemente!</h2>
         </div>
         <!-- Begin Mailchimp Signup Form -->
         <div id="mc_embed_signup">
             <form action="https://bomaoquadrado.us19.list-manage.com/subscribe/post?u=9a022bfd92809d3c0845331e4&amp;id=060b2007e3" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                 <div id="mc_embed_signup_scroll">
-                    <label for="mce-EMAIL">Subscreva para as nossas novidades!</label>
-                    <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+                    <label for="mce-EMAIL">Entretanto, subscreva para as nossas novidades :) </label>
+                    <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="e-mail">
                     <div id="mergeRow-gdpr" class="mergeRow gdpr-mergeRow content__gdprBlock mc-field-group">
                         <div class="content__gdpr">
-                            <div class="tooltip">Tome aqui conhecimento dos termos:
+                            <div class="tooltip">Clique aqui e tome conhecimento dos termos:
                                 <span class="tooltiptext">
                                     <p>
                                         Poderá cancelar a sua subscrição a qualquer altura ao clicar no endereço que está localizado no rodapé dos nossos e-mail. Para mais informações sobre as nossas práticas de privacidade, visite o nosso website ou entre em contato connosco em caso de dúvida.
@@ -33,9 +34,9 @@
                                 </span>
                             </div>
                             <fieldset class="mc_fieldset gdprRequired mc-field-group" name="interestgroup_field">
-                                <label class="checkbox subfield" for="gdpr_18593">
-                                    <input type="checkbox" id="gdpr_18593" name="gdpr[18593]" value="Y" class="av-checkbox gdpr" placeholder="e-mail">
-                                    <span>Li e aceito.</span> 
+                                <label class="checkbox subfield" for="gdpr_18593" style="display: grid; grid-template-columns: min-content 1fr;margin-top: 5px;">
+                                    <input type="checkbox" id="gdpr_18593" name="gdpr[18593]" value="Y" class="av-checkbox gdpr">
+                                    <span style="margin-left: 10px;">Li e aceito.</span> 
                                 </label>
                             </fieldset>
                         </div>
@@ -54,5 +55,6 @@
             <p>Quem prova quer mais!</p>
         </div> 
     </div>
+    <!-- <div class="stripe stripe-right"></div> -->
 </body>
 </html>
