--- a/src/index.html
+++ b/src/index.html
@@ -10,24 +10,24 @@
     <main class="parallax-wrapper">
         <header class="main-header">
             <div class="roadmap">
-                <a href="">
+                <a href="https://www.google.com/maps/dir/?api=1&destination=37.104594,-8.674612" target="_blank">
                     <div class="destination">
-                        <span>Lagos</span>
-                        <!-- <span>(anterior)</span> -->
+                        <span>Praia dos Três Irmãos</span>
+                        <span>27-10-2018</span>
                     </div>
                 </a>
                 <div class="destination connection"></div>
-                <a href="">
+                <a href="https://www.google.com/maps/dir/?api=1&destination=37.133377,-8.535102" target="_blank">
                     <div class="destination current">
                         <span>Portimão</span>
-                        <!-- <span>(actual)</span> -->
+                        <span>27-10-2018</span>
                     </div>
                 </a>
                 </a><div class="destination connection"></div>
-                <a href="">
+                <a href="https://www.google.com/maps/dir/?api=1&destination=37.015578,-7.920545" target="_blank">
                     <div class="destination">
-                        <span>Faro</span>
-                        <!-- <span>(proximo)</span> -->
+                        <span>Albufeira</span>
+                        <span>27-10-2018</span>
                     </div>
                 </a>
             </div>
